@@ -50,6 +50,7 @@ PASS forInSum(Array()) is ''
 PASS forInSum(Array('a')) is 'a'
 PASS forInSum(a0) is ''
 PASS forInSum(a1) is 'a'
+PASS String([].sort()) is ''
 PASS String([3,1,'2'].sort()) is '1,2,3'
 PASS String([,'x','aa'].sort()) is 'aa,x,'
 PASS var a = ['aa', 'b', 'cccc', 'ddd']; String(a.sort(comp)) is 'b,aa,ddd,cccc'
